--- a/index.html
+++ b/index.html
@@ -229,9 +229,9 @@
                             <div class="col-md-12 portfolio-filter text-center">
                                 <ul>
                                     <li class="active" data-filter="*">All</li>
-                                    <li data-filter=".brand">Brand</li>
+                                    <!-- <li data-filter=".brand">Brand</li> -->
                                     <li data-filter=".design">Design</li>
-                                    <li data-filter=".graphic">Graphic</li>
+                                    <li data-filter=".graphic">App</li>
                                 </ul>
                             </div>
                         </div>
@@ -240,7 +240,7 @@
                         <div class="row portfolio-items mb-50">
 
                             <!--Portfolio Item-->
-                            <div class="item col-lg-4 col-sm-6 brand graphic">
+                            <div class="item col-lg-4 col-sm-6 design">
                                 <a class="image-link" href="img/portfolio/Screenshot 2023-05-01 104412.png">
                                     <figure>
                                         <img src="img/portfolio/Screenshot 2023-05-01 104412.png" alt="">
@@ -254,11 +254,11 @@
 
                             <!--Portfolio Item-->
                             <div class="item col-lg-4 col-sm-6 design">
-                                <a class="ajax-link" href="img/portfolio/Screenshot 2023-05-01 104937.png">
+                                <a class="image-link" href="img/portfolio/Screenshot 2023-05-01 104937.png">
                                     <figure>
                                         <img src="img/portfolio/Screenshot 2023-05-01 104937.png" alt="">
                                         <figcaption>
-                                            <h4>Notepad Design</h4>
+                                            <h4>Restaurant</h4>
                                             <p>Design</p>
                                         </figcaption>
                                     </figure>
@@ -266,69 +266,69 @@
                             </div>
 
                             <!--Portfolio Item-->
-                            <!-- <div class="item col-lg-4 col-sm-6 design graphic">
-                                <a class="video-link" href="https://www.youtube.com/watch?v=k_okcNVZqqI">
+                            <div class="item col-lg-4 col-sm-6 design">
+                                <a class="image-link" href="img/portfolio/gericht-900px.png">
                                     <figure>
-                                        <img src="img/portfolio/img-3.jpg" alt="">
+                                        <img src="img/portfolio/gericht.png" alt="gericht restaurant">
                                         <figcaption>
-                                            <h4>Creative Cup</h4>
-                                            <p>Graphic</p>
-                                        </figcaption>
-                                    </figure>
-                                </a>
-                            </div> -->
-
-                            <!--Portfolio Item-->
-                            <!-- <div class="item col-lg-4 col-sm-6 design">
-                                <a class="image-link" href="img/portfolio/img-4.jpg">
-                                    <figure>
-                                        <img src="img/portfolio/img-4.jpg" alt="">
-                                        <figcaption>
-                                            <h4>Business Card</h4>
+                                            <h4>Restaurant</h4>
                                             <p>Design</p>
                                         </figcaption>
                                     </figure>
                                 </a>
-                            </div> -->
+                            </div>
 
                             <!--Portfolio Item-->
-                            <!-- <div class="item col-lg-4 col-sm-6 brand">
-                                <a class="ajax-link" href="single-work.html">
+                            <div class="item col-lg-4 col-sm-6 graphic">
+                                <a class="image-link" href="img/portfolio/todo_list.png">
                                     <figure>
-                                        <img src="img/portfolio/img-5.jpg" alt="">
+                                        <img src="img/portfolio/todo_list.png" alt="">
                                         <figcaption>
-                                            <h4>Back Pack</h4>
-                                            <p>Brand</p>
+                                            <h4>Todo List</h4>
+                                            <p>App</p>
                                         </figcaption>
                                     </figure>
                                 </a>
-                            </div> -->
+                            </div>
 
                             <!--Portfolio Item-->
-                            <!-- <div class="item col-lg-4 col-sm-6 design">
-                                <a class="ajax-link" href="single-work.html">
+                            <div class="item col-lg-4 col-sm-6 graphic">
+                                <a class="image-link" href="img/portfolio/myMemories-600px.png">
                                     <figure>
-                                        <img src="img/portfolio/img-6.jpg" alt="">
+                                        <img src="img/portfolio/myMemories-600px.png" alt="">
                                         <figcaption>
-                                            <h4>Door Hangar</h4>
-                                            <p>Design</p>
+                                            <h4>Memories</h4>
+                                            <p>App</p>
                                         </figcaption>
                                     </figure>
                                 </a>
-                            </div> -->
+                            </div>
 
                             <!--Portfolio Item-->
-                            <!-- <div class="item col-lg-4 col-sm-6 graphic">
-                                <a class="image-link" href="img/portfolio/img-7.jpg">
+                            <div class="item col-lg-4 col-sm-6 design">
+                                <a class="image-link" href="img/portfolio/dalle.png">
                                     <figure>
-                                        <img src="img/portfolio/img-7.jpg" alt="">
+                                        <img src="img/portfolio/dalle.png" alt="">
                                         <figcaption>
-                                            <h4>Notepad Design</h4>
-                                            <p>graphic</p>
+                                            <h4>DAll-E Clone</h4>
+                                            <p>App</p>
                                         </figcaption>
                                     </figure>
                                 </a>
-                            </div> -->
+                            </div>
+
+                            <!--Portfolio Item-->
+                            <div class="item col-lg-4 col-sm-6 graphic">
+                                <a class="image-link" href="img/portfolio/marvel.png">
+                                    <figure>
+                                        <img src="img/portfolio/marvel.png" alt="">
+                                        <figcaption>
+                                            <h4>Marvel Hero Lookup</h4>
+                                            <p>App</p>
+                                        </figcaption>
+                                    </figure>
+                                </a>
+                            </div>
 
                             <!--Portfolio Item-->
                             <!-- <div class="item col-lg-4 col-sm-6 brand">
