--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                             <div class="item col-lg-4 col-sm-6 design">
                                 <a class="image-link" href="img/portfolio/Screenshot 2023-05-01 104412.png">
                                     <figure>
-                                        <img src="img/portfolio/Screenshot 2023-05-01 104412.png" alt="">
+                                        <img src="img/portfolio/Screenshot 2023-05-01 104412.png" alt="Barber Shop">
                                         <figcaption>
                                             <h4>Barber Shop</h4>
                                             <p>Design</p>
@@ -256,7 +256,7 @@
                             <div class="item col-lg-4 col-sm-6 design">
                                 <a class="image-link" href="img/portfolio/Screenshot 2023-05-01 104937.png">
                                     <figure>
-                                        <img src="img/portfolio/Screenshot 2023-05-01 104937.png" alt="">
+                                        <img src="img/portfolio/Screenshot 2023-05-01 104937.png" alt="Restaurant">
                                         <figcaption>
                                             <h4>Restaurant</h4>
                                             <p>Design</p>
@@ -282,7 +282,7 @@
                             <div class="item col-lg-4 col-sm-6 graphic">
                                 <a class="image-link" href="img/portfolio/todo_list.png">
                                     <figure>
-                                        <img src="img/portfolio/todo_list.png" alt="">
+                                        <img src="img/portfolio/todo_list.png" alt="Todo list">
                                         <figcaption>
                                             <h4>Todo List</h4>
                                             <p>App</p>
@@ -295,7 +295,7 @@
                             <div class="item col-lg-4 col-sm-6 graphic">
                                 <a class="image-link" href="img/portfolio/myMemories-600px.png">
                                     <figure>
-                                        <img src="img/portfolio/myMemories-600px.png" alt="">
+                                        <img src="img/portfolio/myMemories-600px.png" alt="social media app">
                                         <figcaption>
                                             <h4>Memories</h4>
                                             <p>App</p>
@@ -306,7 +306,7 @@
 
                             <!--Portfolio Item-->
                             <div class="item col-lg-4 col-sm-6 design">
-                                <a class="image-link" href="img/portfolio/dalle.png">
+                                <a class="image-link" href="https://visual-forge.netlify.app/">
                                     <figure>
                                         <img src="img/portfolio/dalle.png" alt="">
                                         <figcaption>
