--- a/index.html
+++ b/index.html
@@ -305,8 +305,8 @@
                             </div>
 
                             <!--Portfolio Item-->
-                            <div class="item col-lg-4 col-sm-6 design">
-                                <a class="image-link" href="https://visual-forge.netlify.app/">
+                            <div class="item col-lg-4 col-sm-6 graphic">
+                                <a class="image-link" href="img/portfolio/dalle.png">
                                     <figure>
                                         <img src="img/portfolio/dalle.png" alt="">
                                         <figcaption>
