added new project

--- a/index.html
+++ b/index.html
@@ -295,9 +295,9 @@
                             <div class="item col-lg-4 col-sm-6 graphic">
                                 <a class="image-link" href="img/portfolio/myMemories-600px.png">
                                     <figure>
-                                        <img src="img/portfolio/myMemories-600px.png" alt="social media app">
+                                        <img src="img/portfolio/JourneyJunction.png" alt="social media app">
                                         <figcaption>
-                                            <h4>Memories</h4>
+                                            <h4>JourneyJunction</h4>
                                             <p>App</p>
                                         </figcaption>
                                     </figure>
@@ -310,7 +310,7 @@
                                     <figure>
                                         <img src="img/portfolio/dalle.png" alt="">
                                         <figcaption>
-                                            <h4>DAll-E Clone</h4>
+                                            <h4>Visual Forge</h4>
                                             <p>App</p>
                                         </figcaption>
                                     </figure>
